--- a/layouts/partials/doc/slow_listener.html
+++ b/layouts/partials/doc/slow_listener.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="js">
+		  <a data-toggle="tab" href="#slow_listener-js">JavaScript</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="py">
 		  <a data-toggle="tab" href="#slow_listener-py">Python</a>
 		</li>
@@ -23,6 +29,12 @@
 		
 		<li class="api-lang" data-language="ruby">
 		  <a data-toggle="tab" href="#slow_listener-ruby">Ruby</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#slow_listener-ts">TypeScript</a>
 		</li>
 		
 	
@@ -87,6 +99,11 @@ public class SlowConsumerListener {
 		
 	
 		
+		<pre class="tab-pane fade" id="slow_listener-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/options_samples.js#L114-116"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// slow consumer detection is not configurable on node-nats
+</code></pre>
+		
+	
+		
 		<pre class="tab-pane fade" id="slow_listener-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/slow_listener.py#L7-50"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">
    nc = NATS()
 
@@ -133,7 +150,12 @@ public class SlowConsumerListener {
 		
 	
 		
-		<pre class="tab-pane fade" id="slow_listener-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L25-27"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client currently does not have option to customize slow consumer limits per sub.
+		<pre class="tab-pane fade" id="slow_listener-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L21-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client currently does not have option to customize slow consumer limits per sub.
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="slow_listener-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/options_samples.ts#L82-84"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// slow consumer detection is not configurable on ts-nats
 </code></pre>
 		
 	
