--- a/layouts/partials/doc/slow_pending_limits.html
+++ b/layouts/partials/doc/slow_pending_limits.html
@@ -15,6 +15,12 @@
 		
 	
 		
+		<li class="api-lang" data-language="js">
+		  <a data-toggle="tab" href="#slow_pending_limits-js">JavaScript</a>
+		</li>
+		
+	
+		
 		<li class="api-lang" data-language="py">
 		  <a data-toggle="tab" href="#slow_pending_limits-py">Python</a>
 		</li>
@@ -23,6 +29,12 @@
 		
 		<li class="api-lang" data-language="ruby">
 		  <a data-toggle="tab" href="#slow_pending_limits-ruby">Ruby</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#slow_pending_limits-ts">TypeScript</a>
 		</li>
 		
 	
@@ -83,6 +95,11 @@ nc.close();
 		
 	
 		
+		<pre class="tab-pane fade" id="slow_pending_limits-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/options_samples.js#L107-109"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// slow pending limits are not configurable on node-nats
+</code></pre>
+		
+	
+		
 		<pre class="tab-pane fade" id="slow_pending_limits-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/sub_pending_limits.py#L6-20"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
 
 await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
@@ -100,7 +117,12 @@ await nc.subscribe(&#34;updates&#34;, cb=cb, pending_bytes_limit=5*1024*1024, pe
 		
 	
 		
-		<pre class="tab-pane fade" id="slow_pending_limits-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L21-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client currently does not have option to customize slow consumer limits per sub.
+		<pre class="tab-pane fade" id="slow_pending_limits-ruby"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ruby-nats-examples/blob/master/notapplicable.txt#L17-19"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-ruby"># The Ruby NATS client currently does not have option to customize slow consumer limits per sub.
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="slow_pending_limits-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/options_samples.ts#L75-77"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// slow pending limits are not configurable on ts-nats
 </code></pre>
 		
 	
