--- a/layouts/partials/doc/connect_multiple.html
+++ b/layouts/partials/doc/connect_multiple.html
@@ -73,7 +73,13 @@ nc.close();
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_multiple-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/connection_samples.js#L67-78"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = NATS.connect({servers: [&#34;nats://demo.nats.io:4222&#34;, &#34;nats://localhost:4222&#34;]});
+		<pre class="tab-pane fade" id="connect_multiple-js"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/node-nats-examples/blob/master/src/connection_samples.js#L67-84"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = NATS.connect({
+    servers: [
+        &#34;nats://demo.nats.io:4222&#34;,
+        &#34;nats://localhost:4222&#34;
+    ]}
+);
+
 nc.on(&#39;connect&#39;, (c) =&gt; {
     // Do something with the connection
     doSomething();
@@ -114,8 +120,13 @@ end
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_multiple-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connection_samples.ts#L53-60"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
-let nc = await connect({servers: [&#34;nats://demo.nats.io:4222&#34;, &#34;nats://localhost:4222&#34;]});
+		<pre class="tab-pane fade" id="connect_multiple-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connection_samples.ts#L53-65"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
+let nc = await connect({
+        servers: [
+            &#34;nats://demo.nats.io:4222&#34;,
+            &#34;nats://localhost:4222&#34;
+        ]
+});
 // Do something with the connection
 
 // When done close it
