Updated go examples with short URL

--- a/layouts/partials/doc/connect_pedantic.html
+++ b/layouts/partials/doc/connect_pedantic.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="connect_pedantic-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect_pedantic/main.go#L10-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">opts := nats.GetDefaultOptions()
-opts.Url = &#34;nats://demo.nats.io:4222&#34;
+opts.Url = &#34;demo.nats.io&#34;
 // Turn on Pedantic
 opts.Pedantic = true
 nc, err := opts.Connect()
