--- a/layouts/partials/doc/connect_name.html
+++ b/layouts/partials/doc/connect_name.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="connect_name-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect_name/main.go#L10-20"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">// Set a connection name
-nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;, nats.Name(&#34;my-connection&#34;))
+nc, err := nats.Connect(&#34;demo.nats.io&#34;, nats.Name(&#34;my-connection&#34;))
 if err != nil {
 	log.Fatal(err)
 }
