--- a/layouts/partials/doc/connect_tls.html
+++ b/layouts/partials/doc/connect_tls.html
@@ -42,7 +42,7 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="connect_tls-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect_tls/main.go#L10-21"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">nc, err := nats.Connect(&#34;nats://localhost:4222&#34;,
+		<pre class="tab-pane fade in active" id="connect_tls-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect_tls/main.go#L10-21"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">nc, err := nats.Connect(&#34;localhost&#34;,
 	nats.ClientCert(&#34;resources/certs/cert.pem&#34;, &#34;resources/certs/key.pem&#34;),
 	nats.RootCAs(&#34;resources/certs/ca.pem&#34;))
 if err != nil {
