--- a/layouts/partials/doc/connect_userpass_url.html
+++ b/layouts/partials/doc/connect_userpass_url.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="connect_userpass_url-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect_userpass_url/main.go#L10-20"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">// Set a user and plain text password
-nc, err := nats.Connect(&#34;nats://myname:password@localhost:4222&#34;)
+nc, err := nats.Connect(&#34;myname:password@localhost&#34;)
 if err != nil {
 	log.Fatal(err)
 }
