--- a/layouts/partials/doc/drain_conn.html
+++ b/layouts/partials/doc/drain_conn.html
@@ -36,12 +36,16 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="drain_conn-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/drain_conn/main.go#L12-48"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">wg := sync.WaitGroup{}
+		<pre class="tab-pane fade in active" id="drain_conn-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/drain_conn/main.go#L12-61"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">wg := sync.WaitGroup{}
 wg.Add(1)
 
 errCh := make(chan error, 1)
 
-nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;,
+// To simulate a timeout, you would set the DrainTimeout()
+// to a value less than the time spent in the message callback,
+// so say: nats.DrainTimeout(10*time.Millisecond).
+
+nc, err := nats.Connect(&#34;demo.nats.io&#34;,
 	nats.DrainTimeout(10*time.Second),
 	nats.ErrorHandler(func(_ *nats.Conn, _ *nats.Subscription, err error) {
 		errCh &lt;- err
@@ -52,9 +56,18 @@ nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;,
 if err != nil {
 	log.Fatal(err)
 }
-defer nc.Close()
 
-// Do something with the connection
+// Subscribe, but add some delay while processing.
+if _, err := nc.Subscribe(&#34;foo&#34;, func(_ *nats.Msg) {
+	time.Sleep(200 * time.Millisecond)
+}); err != nil {
+	log.Fatal(err)
+}
+
+// Publish a message
+if err := nc.Publish(&#34;foo&#34;, []byte(&#34;hello&#34;)); err != nil {
+	log.Fatal(err)
+}
 
 // Drain the connection, which will close it when done.
 if err := nc.Drain(); err != nil {
