--- a/layouts/partials/doc/drain_sub.html
+++ b/layouts/partials/doc/drain_sub.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="drain_sub-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/drain_sub/main.go#L13-67"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">
-	nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;)
+	nc, err := nats.Connect(&#34;demo.nats.io&#34;)
 	if err != nil {
 		log.Fatal(err)
 	}
