--- a/layouts/partials/doc/error_listener.html
+++ b/layouts/partials/doc/error_listener.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="error_listener-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/error_listener/main.go#L10-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">// Set the callback that will be invoked when an asynchronous error occurs.
-nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;,
+nc, err := nats.Connect(&#34;demo.nats.io&#34;,
 	nats.ErrorHandler(func(nc *nats.Conn, sub *nats.Subscription, err error) {
 		log.Printf(&#34;Error: %v&#34;, err)
 	}))
