--- a/layouts/partials/doc/reconnect_10x.html
+++ b/layouts/partials/doc/reconnect_10x.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="reconnect_10x-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/reconnect_10x/main.go#L10-20"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">// Set max reconnects attempts
-nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;, nats.MaxReconnects(10))
+nc, err := nats.Connect(&#34;demo.nats.io&#34;, nats.MaxReconnects(10))
 if err != nil {
 	log.Fatal(err)
 }
