--- a/layouts/partials/doc/reconnect_5mb.html
+++ b/layouts/partials/doc/reconnect_5mb.html
@@ -43,7 +43,7 @@
 	
 		
 		<pre class="tab-pane fade in active" id="reconnect_5mb-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/reconnect_5mb/main.go#L10-20"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">// Set reconnect buffer size in bytes (5 MB)
-nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;, nats.ReconnectBufSize(5*1024*1024))
+nc, err := nats.Connect(&#34;demo.nats.io&#34;, nats.ReconnectBufSize(5*1024*1024))
 if err != nil {
 	log.Fatal(err)
 }
