fix the viz cdn entry

--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,7 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
 <!-- Viz Support -->
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/viz.js/1.7.1/viz.js"> </script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/1.7.1/viz.js"> </script>
 
 <!-- Site code -->
 <script>
