Add Ovums On The Radar - NATS report

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -10,6 +10,12 @@
           {{ partial "recent-posts.html" . }}
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Resources</h3>
+          {{ partial "resources.html" . }}
+        </div>
+      </div>
     </div>
   </div>
 </div>
