WIP Changed GDPR notice presentation.

--- a/layouts/partials/gdpr.html
+++ b/layouts/partials/gdpr.html
@@ -1,99 +1,4 @@
-<div id="gdpr" class="hide navbar-fixed-bottom footer">
-    <h3>Privacy Policy</h3>
-    We value and respect your privacy. Analytics is used to track consumers of our site and improve its content. We do
-    not share, nor sell data to third parties, nor link to any personal information on the collected data.
-    Thank you for your interest in NATS.
-    </p>
-    <form>
-        <div>
-            <div class="checkbox">
-                <label><input id="disable_analytics" value="true" type="checkbox">Disable analytics</label>
-            </div>
-            <span class="pull-right">
-            <button type="button" class="btn btn-success" onclick="gdprOK()">OK</button>
-        </span>
-        </div>
-    </form>
+<div id="gdpr" class="hide" style="position:relative;"><input hidden id="disable_analytics" value="true" type="checkbox">
+    NATS uses cookies to ensure you get the best experience on our website.  Continuing to use this site assumes compliance with our <a href="/privacy">Privacy Policy</a>.
+    <button type="button" class="btn btn-success btn-sm" style="margin-left:10px;" onclick="gdprOK()">Got it!</button>
 </div>
-
-<script>
-function getGAKey() {
-    return "UA-111730698-1";
-}
-
-function getGAKeyDisableKey() {
-    return "ga-disable-" + getGAKey();
-}
-function getCookie() {
-    var cookies = document.cookie;
-    var a = cookies.split(";");
-    return a.find(function (e) {
-        e = e.trim();
-        return e.startsWith("ga-disable=");
-    });
-}
-
-function updateCheckbox(tc) {
-    // set the state of the html to match in case the preview it
-    var checked = false;
-    if (tc) {
-        checked = tc.trim().split('=')[1] === "true";
-    }
-    $('#disable_analytics').prop('checked', checked);
-}
-
-function addGA() {
-    // now load google analytics script
-    if (!$('#gascript').length) {
-        var s = document.createElement('script', {async: '', id: 'gascript'});
-        s.type = 'text/javascript';
-        s.src = 'https://www.google-analytics.com/analytics.js';
-        $('body').append(s);
-    }
-}
-
-function checkTrack() {
-    var tc = getCookie();
-    updateCheckbox(tc);
-
-    // set it up early
-    var disable = $('#disable_analytics').is(':checked');
-    window[getGAKeyDisableKey()] = disable;
-
-    if (!tc) {
-        openPrivacy(tc);
-    } else {
-        var disable = tc.trim().split('=')[1] === "true";
-        // set a property on the window to disable ga
-        // https://developers.google.com/analytics/devguides/collection/analyticsjs/user-opt-out
-        window[getGAKeyDisableKey()] = disable;
-        addGA();
-    }
-}
-
-function openPrivacy(tc) {
-    var sel = $('#gdpr');
-    sel.removeClass('hide');
-    var height = sel.outerHeight();
-    $('body').css('padding-bottom', height + "px");
-    return false;
-}
-
-
-function oneYearFromNow() {
-    var d = new Date();
-    d.setFullYear(d.getFullYear() + 1);
-    return d;
-}
-
-function gdprOK() {
-    var disable = $('#disable_analytics').is(':checked');
-    window[getGAKeyDisableKey()] = disable;
-    $('#gdpr').addClass('hide');
-    $('body').css('padding-bottom', '0px');
-    var d = new Date();
-    d.setFullYear(d.getFullYear() + 1);
-    document.cookie = "ga-disable=" + disable + "; expires=" + oneYearFromNow().toUTCString() + "; path=/";
-    addGA();
-}
-</script>
