--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -237,11 +237,13 @@ a.toolbar-icons {
 
 #gdpr {
   font-size: 85%;
-  background-color: @nats-brand-gray-light;
-  color: @text-color;
-  padding: 20px;
-  border-top: solid black;
+  background-color: #375c93;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  border-width: 0;
   opacity: 1.0;
+
 }
 
 #gdpr > h3 {
