--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -118,6 +118,109 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-clike.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-java.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-ruby.min.js"></script>
+
+
+<script>
+    function getGAKey() {
+        return "UA-111730698-1";
+    }
+
+    function getGAKeyDisableKey() {
+        return "ga-disable-" + getGAKey();
+    }
+    function getCookie() {
+        var cookies = document.cookie;
+        var a = cookies.split(";");
+        return a.find(function (e) {
+            e = e.trim();
+            return e.startsWith("ga-disable=");
+        });
+    }
+
+    function updateCheckbox(tc) {
+        // set the state of the html to match in case the preview it
+        var checked = false;
+        if (tc) {
+            checked = tc.trim().split('=')[1] === "true";
+        }
+        $('#disable_analytics').prop('checked', checked);
+    }
+
+    function addGA() {
+        // now load google analytics script
+        if (!$('#gascript').length) {
+            var s = document.createElement('script', {async: '', id: 'gascript'});
+            s.type = 'text/javascript';
+            s.src = 'https://www.google-analytics.com/analytics.js';
+            $('body').append(s);
+        }
+    }
+
+    function checkTrack() {
+        var tc = getCookie();
+        updateCheckbox(tc);
+
+        // set it up early
+        var disable = $('#disable_analytics').is(':checked');
+        window[getGAKeyDisableKey()] = disable;
+
+        if (!tc) {
+            openPrivacy(tc);
+        } else {
+            var disable = tc.trim().split('=')[1] === "true";
+            // set a property on the window to disable ga
+            // https://developers.google.com/analytics/devguides/collection/analyticsjs/user-opt-out
+            window[getGAKeyDisableKey()] = disable;
+            addGA();
+        }
+    }
+
+    function openPrivacy(tc) {
+        var gdprSel = $('#gdpr');
+        gdprSel.removeClass('hide');
+        return handleSizes();
+    }
+
+    var paddingTop = 0;
+    function handleSizes() {
+        var gdprSel = $('#gdpr');
+        if (!gdprSel.hasClass('hide')) {
+            var h = gdprSel.innerHeight();
+            var body = $('body');
+            var pt = parseInt(body.css('padding-top'), 10);
+            if(paddingTop === 0) {
+                paddingTop = pt;
+            }
+            body.css("padding-top", (paddingTop + h) + "px");
+            $('#nav').css({top: h + "px"});
+            gdprSel.css({top: 0, position: "fixed", zIndex: 2000, width: "100%"});
+        }
+    }
+
+    $(window).resize(handleSizes);
+
+
+    function oneYearFromNow() {
+        var d = new Date();
+        d.setFullYear(d.getFullYear() + 1);
+        return d;
+    }
+
+    function gdprOK() {
+        var disable = $('#disable_analytics').is(':checked');
+        window[getGAKeyDisableKey()] = disable;
+        $('#nav').css({top: "0px"});
+        $('#gdpr').addClass('hide');
+        if(paddingTop) {
+            $('body').css("padding-top", paddingTop + "px");
+        }
+        var d = new Date();
+        d.setFullYear(d.getFullYear() + 1);
+        document.cookie = "ga-disable=" + disable + "; expires=" + oneYearFromNow().toUTCString() + "; path=/";
+        addGA();
+    }
+</script>
+
 <!-- Google Analytics Configuration - scripts added dynamically after user opts in or out-->
 <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
