--- a/src/less/bootstrap/navbar.less
+++ b/src/less/bootstrap/navbar.less
@@ -137,6 +137,7 @@
 // Fix the top/bottom navbars when screen real estate supports it
 .navbar-fixed-top,
 .navbar-fixed-bottom {
+
   position: fixed;
   right: 0;
   left: 0;
@@ -149,9 +150,10 @@
 }
 .navbar-fixed-top {
   top: 0;
-  border-width: 0 0 1px;
+  border-width: 0 0 0;
 }
 .navbar-fixed-bottom {
+  background: #00011f;
   bottom: 0;
   margin-bottom: 0; // override .navbar defaults
   border-width: 1px 0 0;
