--- a/layouts/partials/gdpr.html
+++ b/layouts/partials/gdpr.html
@@ -1,4 +1,4 @@
-<div id="gdpr" class="hide" style="position:relative;"><input hidden id="disable_analytics" value="true" type="checkbox">
+<div id="gdpr" class="hide" style="position:relative;">
     NATS uses cookies to ensure you get the best experience on our website.  Continuing to use this site assumes compliance with our <a href="/privacy">Privacy Policy</a>.
-    <button type="button" class="btn btn-success btn-sm" style="margin-left:10px;" onclick="gdprOK()">Got it!</button>
+    <button type="button" class="btn btn-success btn-sm" style="margin-left:10px;" onclick="closeRibbon()">Got it!</button>
 </div>
