--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,6 +15,7 @@
 
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/slider.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism-okaidia.min.css">
 
