Add OpenTable logo to community & index

--- a/layouts/partials/logos/logo-container.html
+++ b/layouts/partials/logos/logo-container.html
@@ -1,10 +1,12 @@
 <div class="row bottom-logo-container">
+    {{ partial "logos/open_table.html" . }}
     {{ partial "logos/ericsson.html" . }}
     {{ partial "logos/htc.html" . }}
     {{ partial "logos/siemens.html" . }}
-    {{ partial "logos/vmware.html" . }}
+
 </div>
 <div class="row bottom-logo-container">
+    {{ partial "logos/vmware.html" . }}
     {{ partial "logos/pivotal.html" .}}
     {{ partial "logos/ge.html" . }}
     {{ partial "logos/baidu.html" . }}
