--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
 
                             <p class="bottom-info">We are a Cloud Native Computing Foundation member project. Members of the Synadia team created the NATS Server (written in Go), NATS Streaming, and clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C#. The community has contributed a growing list of libraries, including Arduino, Rust, Lua, PHP, Perl, and <a href="/download">more</a>.</p>
 
-                            <p class="bottom-info">Companies like Ericsson, HTC, Siemens, VMware, Pivotal, GE and Baidu rely on the NATS enterprise messaging system for its highly performant and resilient capabilities.</p>
+                            <p class="bottom-info">Companies like OpenTable, Ericsson, HTC, Siemens, VMware, Pivotal, GE and Baidu rely on the NATS enterprise messaging system for its highly performant and resilient capabilities.</p>
                             {{ partial "logos/logo-container.html" . }}
                         </div>
                     </div>
