--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -118,6 +118,143 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-clike.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-java.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-ruby.min.js"></script>
+
+
+<script>
+    function getGAKey() {
+        return "UA-111730698-1";
+    }
+
+    function getGAKeyDisableKey() {
+        return "ga-disable-" + getGAKey();
+    }
+    function getCookie() {
+        var cookies = document.cookie;
+        var a = cookies.split(";");
+        return a.find(function (e) {
+            e = e.trim();
+            return e.startsWith("ga-disable=");
+        });
+    }
+
+    function updateCheckbox(tc) {
+        // set the state of the html to match in case the preview it
+        var checked = false;
+        if (tc) {
+            checked = tc.trim().split('=')[1] == "true";
+        }
+        $('#disable_analytics').prop('checked', checked);
+        return checked;
+    }
+
+    function addGA() {
+        // now load google analytics script
+        if (!$('#gascript').length) {
+            var s = document.createElement('script', {async: '', id: 'gascript'});
+            s.type = 'text/javascript';
+            s.src = 'https://www.google-analytics.com/analytics.js';
+            $('body').append(s);
+        }
+    }
+
+    function checkTrack() {
+        var tc = getCookie();
+        var disable = updateCheckbox(tc);
+        // set a property on the window to disable ga
+        // https://developers.google.com/analytics/devguides/collection/analyticsjs/user-opt-out
+        window[getGAKeyDisableKey()] = disable;
+
+        if (!tc) {
+            // while this is opened, we don't track or download scripts
+            openPrivacy(tc);
+        } else {
+            addGA();
+        }
+    }
+
+    function openPrivacy(tc) {
+        var gdprSel = $('#gdpr');
+        gdprSel.removeClass('hide');
+        return handleSizes();
+    }
+
+    var paddingTop = 0;
+    function handleSizes() {
+        var gdprSel = $('#gdpr');
+        if (!gdprSel.hasClass('hide')) {
+            var h = gdprSel.innerHeight();
+            var body = $('body');
+            var pt = parseInt(body.css('padding-top'), 10);
+            if(paddingTop === 0) {
+                paddingTop = pt;
+            }
+            body.css("padding-top", (paddingTop + h) + "px");
+            $('#nav').css({top: h + "px"});
+            gdprSel.css({top: 0, position: "fixed", zIndex: 2000, width: "100%"});
+        }
+    }
+
+    $(window).resize(handleSizes);
+    $(window).load(function() {
+        var sel = $('#disable_analytics');
+        if(sel.length) {
+            sel.change(function() {
+                deleteCookie("ga-disable");
+                if ($(this).is(':checked')) {
+                    disableAnalytics();
+                } else {
+                    enableAnalytics();
+                }
+                return false;
+            });
+        };
+    });
+
+    function disableAnalytics() {
+        window[getGAKeyDisableKey()] = true;
+        closeRibbon();
+        var d = new Date();
+        d.setFullYear(d.getFullYear() + 1);
+        document.cookie = "ga-disable=true; expires=" + oneYearFromNow().toUTCString() + "; path=/";
+        addGA();
+    }
+
+    function enableAnalytics() {
+        window[getGAKeyDisableKey()] = false;
+        closeRibbon();
+        var d = new Date();
+        d.setFullYear(d.getFullYear() + 1);
+        document.cookie = "ga-disable=false; expires=" + oneYearFromNow().toUTCString() + "; path=/";
+        addGA();
+    }
+
+
+    function oneYearFromNow() {
+        var d = new Date();
+        d.setFullYear(d.getFullYear() + 1);
+        return d;
+    }
+
+    function closeRibbon() {
+        var gdprSel = $('#gdpr');
+        if(!gdprSel.hasClass('hide')) {
+            $('#nav').css({top: "0px"});
+            gdprSel.addClass('hide');
+            if (paddingTop) {
+                $('body').css("padding-top", paddingTop + "px");
+            }
+            // they closed the notice, so they accepted
+            if(getCookie() === undefined) {
+                enableAnalytics();
+            }
+        }
+    }
+
+    function deleteCookie(name) {
+        document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+    }
+</script>
+
 <!-- Google Analytics Configuration - scripts added dynamically after user opts in or out-->
 <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
