--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -1,16 +1,36 @@
 <h2>Coming Events</h2>
-<p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
+<p>Join us at our upcoming events and talks. Have a suggested event or want us to join yours? Let us know <a href="mailto:info@nats.io?subject=Suggested Event">info@nats.io</a>.</p>
+<!--<p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>-->
+
 
 <ul class="list-unstyled row">
     {{ range .Site.Data }}
     {{ range .events }}
 
     <li class="col-sm-12">
+    <h4>{{ .venue }}</h4>
+    <ul class="list-unstyled">
+        <li><strong>When:</strong> {{ .when }}</li>
+        <li><strong>Who:</strong> {{ .who }}</li>
+        <li><strong>What:</strong> {{ .what }}</li>
+        <li><strong>Where:</strong> {{ .where }}</li>
+        <li><a href="{{ .ref }}" target="_blank">More Information</a></li>
+    </ul>
+</li>
+    {{ end }}
+    {{ end }}
+</ul>
+
+    <ul class="list-unstyled row">
+        {{ range .Site.Data }}
+        {{ range .icymi }}
+
+    <li class="col-sm-12">
         <h4>{{ .venue }}</h4>
         <ul class="list-unstyled">
             <li><strong>When:</strong> {{ .when }}</li>
             <li><strong>Who:</strong> {{ .who }}</li>
-            <li><strong>What:</strong> {{ .what }}</li>
+            <li><strong>What:</strong> <a href="{{ .link }}" target="_blank">{{ .what }}</a></li>
             <li><strong>Where:</strong> {{ .where }}</li>
             <li><a href="{{ .ref }}" target="_blank">More Information</a></li>
         </ul>
