Remove padding from nav list
Signed-off-by: lucperkins <lucperkins@gmail.com>

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -866,7 +866,7 @@ code[data-viz] {
         }
 
         ul {
-          padding: 2px 0px 20px 0px;
+          padding: 0;
           li {
             white-space: nowrap;
             overflow: hidden;
